fix dice offcenter & commit message width/margin 2

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,7 +39,6 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 100px;
-	margin-bottom: 2rem;
 	padding: 20px;
 	height: fit-content;
 	max-width: 80dvw;
@@ -50,5 +49,6 @@ body {
 		line-height: 2.75em;
 		color: white;
 		margin: auto;
+		margin-bottom: 0.5rem;
 	}
 }
